--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-markdown": "^8.0.7",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "umi": "^4.0.67",
+    "umi-request": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
