--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "umi-request": "^1.4.0"
   },
   "devDependencies": {
+    "@types/node": "^20.1.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
