--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.4.5",
     "less": "^4.1.3",
     "moment": "^2.29.4",
+    "prism-react-renderer": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
